--- a/app/src/main/res/layout/activity_create_program.xml
+++ b/app/src/main/res/layout/activity_create_program.xml
@@ -24,6 +24,20 @@
         android:layout_weight="2"
         android:orientation="vertical"
         android:weightSum="5">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="5"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:background="@android:drawable/ic_input_add"/>
+
+        </LinearLayout>
+
 
 
 
